--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/conteiner';
+@import 'blocks/header';
+@import 'blocks/page';
+@import 'blocks/icons';
+@import 'blocks/search';
 
 body {
-  background: $c-gray;
+  background: $bg-color;
 }
