--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,18 @@
-$c-gray: #eee;
+// $c-gray: #eee;
+$bg-color: #FFF;
+$dark-title-color: #000;
+$light-main-color: #FFF;
+$dark-main-color: #0F0E08;
+$events-description-color: #4E4E4E;
+$events-title-color: #687480;
+$menu-bg-color: #1A5A4C;
+$hover-effect-duretion: 0.3s;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$columns-on-mobile: 2;
+$columns-on-tablet: 6;
+$columns-on-desktop: 12;
+
+
+
+
