added edits to the header, subscribe, gallery and footer sections

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -41,6 +41,7 @@
 
   &__contact-info {
     position: relative;
+    width: 100%;
     grid-column: span 2;
     display: flex;
     font-size: 14px;
@@ -73,6 +74,7 @@
   }
 
   &__work-schedule {
+    width: 50%;
     @include on-tablet-s {
       max-width: 220px;
     }
@@ -92,6 +94,7 @@
   }
 
   &__contacts {
+    width: 50%;
     @include on-tablet-s {
       max-width: 220px;
     }
