--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -72,28 +72,24 @@
     position: relative;
     row-gap: 20px;
     display: grid;
+    justify-items: center;
 
     @include landscape {
-      justify-items: end;
       justify-content: center;
     }
 
-    @include on-tablet-s {
-      grid-column: span 3;
-      align-content: end;
-    }
-
     @include on-tablet {
+      grid-column: span 3;
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
+      align-items: flex-end;
       row-gap: 38px;
     }
 
     @include on-desktop-s {
       grid-column: span 6;
       row-gap: 89px;
-      display: flex;
-      flex-direction: column;
-      justify-content: end;
-      align-items: flex-end;
     }
   }
 
