--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -5,6 +5,10 @@
     padding-top: 0;
   }
 
+  @include ondesktop {
+    overflow-x: visible;
+  }
+
   &-title {
     margin: 0;
     margin-top: 183px;
@@ -37,14 +41,17 @@
     right: 0;
     margin-left: 20px;
     margin-top: 40px;
-    width: 1170px;
+    width: 170px;
 
     @include ontable {
       margin-left: 34px;
       margin-top: 48px;
+      width: 70px;
     }
 
     @include ondesktop {
+      width: 1170px;
+
       @include contentpadding;
 
       margin-top: 56px;
@@ -68,6 +75,7 @@
     height: 410px;
 
     @include ontable {
+      display: block;
       width: 340px;
       height: 543px;
     }
@@ -80,6 +88,12 @@
     }
 
     &--second {
+      display: none;
+
+      @include ontable {
+        display: block;
+      }
+
       @include ondesktop {
         width: 770px;
         height: 600px;
