--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,6 +5,25 @@
   }
 }
 
+@mixin grid {
+  display: grid;
+  column-gap: 20px;
+  padding: 0 20px;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@mixin on-tablet {
+  grid-template-columns: repeat(6, 1fr);
+  column-gap: 30px;
+  padding: 0 40px;
+}
+
+@mixin on-desktop {
+  grid-template-columns: repeat(12, 1fr);
+  column-gap: 30px;
+  padding: 0;
+}
+
 @mixin column-flex {
   display: flex;
   flex-direction: column;
