--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
 $c-gray: #eee;
+$green: rgb(26, 90, 76);
+$white: rgba(255, 255, 255);
+$main-transition: transform 0.3s;
+$picture-height: 655px;
+$black: rgb(15, 14, 8);
+$gray: rgb(78, 78, 78);
+$red: rgb(241, 74, 39);
+$menu-scale: scale(1.15);
+$all-transition: all 0.3s;
