project is ready

--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -76,7 +76,7 @@
 
     @include on-tablet {
       flex-direction: row;
-      align-items: end;
+      align-items: start;
       gap: 38px;
     }
   }
@@ -97,6 +97,14 @@
   }
 
   &__weekend {
-    max-width: 150px;
+    max-width: 140px;
+
+    @include on-tablet {
+      max-width: 100px;
+    }
+
+    @include on-desktop {
+      max-width: 140px;
+    }
   }
 }
