--- a/src/styles/modules/_top-bar.scss
+++ b/src/styles/modules/_top-bar.scss
@@ -5,7 +5,7 @@
   padding-block: 15px;
 
   &__logo {
-    margin-inline: auto;
+    margin-inline: auto 140px;
 
     @include on-tablet {
       margin-right: 300px;
