fix header, add events section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,14 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-@import 'blocks/conteiner';
+@import 'blocks/container';
 @import 'blocks/header';
 @import 'blocks/page';
 @import 'blocks/icons';
-@import 'blocks/search';
+@import 'blocks/tickets';
+@import 'blocks/events';
+@import 'blocks/title';
+
 
 body {
   background: $bg-color;
