--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,43 +1,135 @@
 .header {
-  display: flex;
-  flex-direction: column;
+  @include on-tablet {
+    height: 384px;
+  }
 
-  &__grid {
+  @include on-desktop {
+    height: 655px;
+  }
+
+  &__img {
+    display: block;
+    background-image: url(../images/header-img.svg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height: 300px;
+    width: 100%;
+    position: absolute;
+
+    top: 0;
+    right: 0;
+    z-index: -1;
+
+
+    @include on-tablet {
+      height: 374px;
+      width: 50vw;
+    }
+
+    @include on-desktop {
+      height: 655px;
+      width: 55vw;
+    }
+  }
+
+  &__content {
+    position: relative;
+
     @include grid-page;
   }
 
   &__top {
     display: flex;
-    flex-direction: row;
-    z-index: 1;
-    position: absolute;
-    left: 0;
+    height: 70px;
+    line-height: 70px;
+    align-items: center;
     width: 100%;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
 
-  }
-
-  &__img {
-    background-image: url(../images/header-img.png);
-    height: 300px;
-    width: 100%;
-    background-position: center;
-    background-size: cover;
 
     @include on-tablet {
-      grid-column: 4 / -1;
+      margin-top: 15px;
     }
   }
 
-  &__menu-icon {
-    // z-index: 1;
-    // position: absolute;
-    // left: 0;
-  }
-
   &__logo {
+    display: flex;
+
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    height: 61px;
+    object-position: center;
+
+
+    @include on-tablet {
+      height: 70px;
+      line-height: 70px;
+      transform: translateX(80px);
+    }
+
+    @include on-desktop {
+      left: 44%;
+    }
+  }
+
+
+
+  &__inform {
+    display: flex;
+    flex-direction: column;
+    grid-column: 1 / -1;
+    gap: 20px;
+    margin-top: 250px;
+
+    @include on-tablet {
+      gap: 38px;
+      grid-column: 1 / 4;
+      margin-top: 40px;
+    }
+
+    @include on-desktop {
+      gap: 89px;
+      grid-column: 1 / 6;
+      margin-top: 119px;
+    }
+  }
+  &__title {
+    font-family: Montserrat, sans-serif;
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 45px;
+    text-transform: uppercase;
+    text-align: center;
+
+    @include on-tablet {
+      font-size: 54px;
+      text-align: left;
+      line-height: 65px;
+      margin-top: 2px;
+    }
+
+    @include on-desktop {
+  font-size: 72px;
+  line-height: 86px;
+    }
+  }
+
+  &__tickets {
+    @include on-desktop {
+      align-self: flex-end;
+    }
+  }
+
+  &__events {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: rotate(-0.25turn) translateX(-50%);
 
   }
+
 }
