--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -51,7 +51,12 @@
 }
 
 .page {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+
+p {
+  text-decoration: none;
+}
+
